--- a/client/css/editor/sidebarModules.css
+++ b/client/css/editor/sidebarModules.css
@@ -22,6 +22,7 @@
 
 .editorModule .buttonBar {
   text-align: right;
+  position: relative;
 }
 
 .editorModule .buttonBar button {
@@ -30,7 +31,7 @@
 
 /* properties */
 
-.editorModule .segmented-control button.selected {
+.editorModule .segmented-control button.active {
   background:var(--VTTblueDark);
   color:#fff;
 }
@@ -344,6 +345,26 @@
   display: inline-block;
 }
 
+.widgets.editorModule .buttonBar input[type=text]{
+  line-height: 33px;
+  padding: 0 5px;
+  border: 1px solid #0005;
+  border-radius: 5px;
+  padding-left: 25px;
+  margin: 0;
+}
+
+.widgets.editorModule .buttonBar .widgetFilerIcon {
+  font-family: "Material Symbols";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 34px;
+  width: 24px;
+  text-align: right;
+  line-height: 36px;
+}
+
 .widgets.editorModule .editing [icon=delete], .widgets.editorModule .editing [icon=download], .widgets.editorModule .editing [icon=upload] {
   display: inline-block;
 }
@@ -467,6 +488,7 @@
 
 .widgets.editorModule #editWidgetsButton.active {
   color: #ff0;
+  background: var(--VTTblueDark);
 }
 
 .widgets.editorModule .unique-widget-label, .widgets.editorModule .name-widget-label span {
@@ -661,16 +683,15 @@ div.widget-grid-item {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 1px solid #555;
-  background-color: #222;
+  border: 1px solid #222;
   border-radius: 3px;
   flex-basis: 100px;
   flex-grow: 0;
   flex-shrink: 0;
   position: relative;
-  height: 64px;
-  width: 64px;
-  max-width: 64px;
+  height: 75px;
+  width: 75px;
+  max-width: 75px;
 }
 
 div.widget-name {
@@ -679,32 +700,42 @@ div.widget-name {
   left: 0;
   width: 100%;
   font-size: 12px;
-  padding: 0 5px;
+  font-weight: bold;
+  text-shadow: 0 0 2px white;
+  padding: 2px 5px;
   box-sizing: border-box;
+  line-height: 1;
+  background-color: #fffb;
+  z-index: 1;
 }
 
-.widget-grid-item .widget-preview {
-  height: 64px;
-  width: 64px;
-  max-width: 64px;
-  background-color: #333;
+.editorModule.widgets .widget-preview {
+  height: 75px;
+  width: 75px;
+  max-width: 75px;
+  background-color: #3335;
   border-radius: 3px;
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center
 }
 
-.widget-grid-item .widget-preview img {
+.editorModule.widgets .widget-preview img {
   max-width: 100%;
   max-height: 100%;
+  height: 70px;
   object-fit: contain;
 }
 
-.widget-preview .add-to-room-grid {
+.editorModule.widgets .add-to-room-grid {
   position: absolute;
   top: 2px;
   right: 2px;
   height: 24px;
   width: 24px;
   padding: 0;
+  z-index: 2;
 }
 
 .segmented-control {
@@ -717,16 +748,25 @@ div.widget-name {
 
 .segmented-control button{
   margin: 0;
+  padding: 0;
+  text-align: center;
   border-radius: 0;
   border-left: 1px solid #fff5;
   border-right: 1px solid #0005;
   flex-basis: 33px;
   min-width: 33px;
   flex-shrink: 0;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  height: 34px;
+}
+
+.segmented-control button::before {
+  margin: 0;
 }
 
 .segmented-control.sort-control button{
-  padding: 0 5px;
   max-height: 32px;
 }
 
