Add support for background color and opacity and background image opacity

--- a/client/css/widgets/holder.css
+++ b/client/css/widgets/holder.css
@@ -1,5 +1,6 @@
 .holder {
-  background: white;
+  background: var(--bgColor, white);
+  background: color-mix(in srgb, var(--bgColor, white) calc(var(--bgColorOpacity, 1) * 100%), transparent);
   box-sizing: border-box;
   border-width: 1px;
   border-style: solid;
