--- a/client/css/widgets/imagewidget.css
+++ b/client/css/widgets/imagewidget.css
@@ -100,3 +100,22 @@
   white-space: normal;
   line-height: 1.1;
 }
+
+.widget.holder.hasImage {
+  background-image: none;
+}
+
+.widget.holder.hasImage::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+  opacity: var(--bgImageOpacity, 0.2);
+  border-radius: inherit;
+  pointer-events: none;
+}
