Add hoverOpacity; update default holder opacity to 0.2 same as images

--- a/client/css/widgets/imagewidget.css
+++ b/client/css/widgets/imagewidget.css
@@ -29,6 +29,7 @@
   background-image: var(--hoverImage);
   color: var(--hoverColor);
   -webkit-text-stroke: var(--hoverStrokeWidth) var(--hoverStrokeColor);
+  opacity: var(--hoverOpacity, var(--opacity, 1));
 }
 
 .symbolOuterWrapper > .symbolText {
