--- a/client/css/widgets/imagewidget.css
+++ b/client/css/widgets/imagewidget.css
@@ -56,6 +56,7 @@
 }
 
 .autoIconAlignFont {
+  background-image: none !important;
   font-family: "Material Symbols";
   font-weight: normal;
   line-height: 1;
