--- a/client/css/jsonedit.css
+++ b/client/css/jsonedit.css
@@ -538,6 +538,49 @@ body.jsonEdit #toolbar {
   margin-top: 8px;
 }
 
+#jeCommands .key {
+  font-size: inherit;
+  line-height: inherit;
+  margin-bottom: 0.4375rem;
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+  margin-top: 0.25rem;
+  padding: 0.1rem 0.2rem;
+  box-shadow: 0 0 #d9d9d9, 0 0px #d9d9d9, 0 1px #d9d9d9, 0 2px #d9d9d9, 0 3px #d9d9d9, 0 4px #d9d9d9, 0 5px #d9d9d9, 2px 2.5px 4px #adb5bd, 0 -1px 2.5px #adb5bd;
+  background-color: #fff;
+  border-color: #e6e6e6;
+  color: #343a40;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  border: 1px solid #e6e6e6;
+  border-radius: 0.25rem;
+  display: inline-block;
+  font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  font-weight: 400;
+  text-align: left;
+  transform: translate3d(0, 0, 5px);
+  transform-style: preserve-3d;
+  transition: all 0.25s cubic-bezier(0.2, 1, 0.2, 1);
+}
+
+#jeCommands .key::after {
+  border-style: solid;
+  box-sizing: content-box;
+  content: '';
+  display: block;
+  position: absolute;
+  transform-style: preserve-3d;
+  transition: all 0.25s cubic-bezier(0.2, 1, 0.2, 1);
+  border-color: #cccccc;
+  border-radius: 0.5rem;
+  border-width: 0.125rem;
+  bottom: -9px;
+  left: -0.3125rem;
+  right: -0.3125rem;
+  top: -3px;
+  transform: translate3d(0, 0, -3px);
+}
+
 #jeContextButtons > button.jeHighlight {
   background-color: rgba(255, 255, 0, 0.3);
   outline: 2px solid yellow;
