reverted unrelated CSS change

--- a/client/css/jsonedit.css
+++ b/client/css/jsonedit.css
@@ -593,7 +593,7 @@ body.jsonEdit #toolbar {
 
 #jeContextButtons > button > b{
   text-decoration: underline;
-  color: var(--textHighlightColor1);
+  color: yellow;
 }
 
 #je_toggleZoom{
