--- a/client/css/jsonedit.css
+++ b/client/css/jsonedit.css
@@ -587,15 +587,15 @@ body.jsonEdit #toolbar {
   transform: translate3d(0, 0, -3px);
 }
 
-#jeContextButtons > button.jeHighlight {
+#jeContextButtons .jeEditorLineDesc {
+  font-size: 11px;
+  margin-left: 8px;
+  font-family: monospace;
+  white-space: pre-wrap;
+}
+#jeContextButtons > button.jeHighlight, #jeContextButtons .jeEditorLineDesc mark {
   background-color: gold;
   color: black;
-  font-weight: bold;
-}
-
-#jeContextButtons .jeEditorLineDesc mark {
-  background-color: var(--textHighlightColor1);
-  color: var(--backgroundColor);
   font-weight: bold;
 }
 
