fixed doublequotes for attributes; added special `style` handling

--- a/client/css/jsonedit.css
+++ b/client/css/jsonedit.css
@@ -229,6 +229,8 @@ i.variable{ color: var(--textHighlightColor7); }
 i.htmltag { color: var(--textHighlightColor1); }
 i.htmlattr{ color: var(--textHighlightColor2); }
 i.htmlvalue{ color: var(--textHighlightColor5); }
+i.csskey  { color: var(--textHighlightColor5); }
+i.cssvalue{ color: var(--textHighlightColor7); }
 i.error   { color: var(--textHighlightColor3); font-weight: bold; }
 
 /**** End color formatting ****/
