made html cards and basic widgets use white-space:collapse

--- a/client/css/widgets/card.css
+++ b/client/css/widgets/card.css
@@ -23,3 +23,7 @@
   background-position: center center;
   box-sizing: border-box;
 }
+
+.card > .cardFace > .cardFaceObject.html {
+  white-space: collapse;
+}
