--- a/client/css/widgets/imagewidget.css
+++ b/client/css/widgets/imagewidget.css
@@ -20,7 +20,7 @@
   max-width: var(--targetSize);
   font-size: var(--targetSize);
   color: var(--color);
-  transform: translate(var(--offsetX), var(--offsetY)) rotate(var(--rotation));
+  transform: translate(var(--offsetX), var(--offsetY)) rotate(var(--rotation)) scale(var(--flipX, 1), var(--flipY, 1));
   background-image: var(--image);
   -webkit-text-stroke: var(--strokeWidth) var(--strokeColor);
 }
