--- a/client/css/editor/sidebarModules.css
+++ b/client/css/editor/sidebarModules.css
@@ -1,12 +1,3 @@
-@keyframes flash {
-  0% { background-color: rgba(0, 150, 255, 0.3); }
-  100% { background-color: transparent; }
-}
-
-.flash {
-  animation: flash 1s ease-out;
-}
-
 .editorModule h1 {
   color: var(--VTTblue);
   text-align: center;
@@ -20,24 +11,8 @@
   padding-left: 20px;
 }
 
-.editorModule.widgets .buttonBar {
-  flex-wrap: wrap;
-  align-content: center;
-  align-items: flex-end;
-  justify-content: flex-end;
-}
-
-.editorModule.widgets .buttonBar .actions {
-  flex-grow: 0;
-  display: flex;
-  align-content: center;
-  align-items: flex-end;
-  justify-content: flex-end;
-}
-
 .editorModule .buttonBar {
   text-align: right;
-  position: relative;
 }
 
 .editorModule .buttonBar button {
@@ -45,11 +20,6 @@
 }
 
 /* properties */
-
-.editorModule .segmented-control button.active {
-  background:var(--VTTblueDark);
-  color:#fff;
-}
 
 .editorModule .widgetSelectionButton {
   height: 150px;
@@ -71,8 +41,7 @@
 }
 .editorModule .widgetSelectionButton.selected::after {
   font-family: 'Material Symbols';
-  font-size: 1.2em;
-  line-height: 1.2em;
+  line-height: 1.25em;
   text-align: center;
   height: 1.25em;
   width: 1.25em;
@@ -84,8 +53,8 @@
   border-bottom-left-radius: 50%;
   content: 'check';
   position: absolute;
-  top: -2px;
-  right: -2px;
+  top: -3px;
+  right: -3px;
 }
 .editorModule .widgetSelectionButton .spinner > svg.background {
   left: 0;
@@ -106,7 +75,7 @@
 
 
 .tune.editorModule .suitProperties {
-  height: 135px;
+  height: 160px;
 }
 
 .tune.editorModule .suitProperties > button.widgetSelectionButton {
@@ -114,7 +83,7 @@
 }
 
 .tune.editorModule .suitProperties > div {
-  margin-left: 160px;
+  margin-left: 170px;
 }
 
 .tune.editorModule .suitProperties label {
@@ -328,9 +297,9 @@
 }
 
 .image.editorModule .externalLink img {
-  height: 75px;
-  width: 75px;
-  min-width: 75px;
+  height: 100px;
+  width: 100px;
+  min-width: 100px;
   object-fit: contain;
 }
 
@@ -346,7 +315,7 @@
 }
 .image.editorModule td > img {
   display: block;
-  width: 75px;
+  width: 100px;
   background: linear-gradient(45deg, rgba(0, 0, 0, 0.1) 25%, transparent 25%, transparent 75%, rgba(0, 0, 0, 0.1) 75%, rgba(0, 0, 0, 0.1) 0), linear-gradient(45deg, rgba(0, 0, 0, 0.1) 25%, transparent 25%, transparent 75%, rgba(0, 0, 0, 0.1) 75%, rgba(0, 0, 0, 0.1) 0), white;
   background-position: 0px 0, 5px 5px;
   background-size: 10px 10px, 10px 10px;
@@ -358,6 +327,38 @@
 .image.editorModule td > label {
   white-space: pre;
   display: inline-block;
+}
+
+/* widgets */
+
+@keyframes flash {
+  0% { background-color: rgba(0, 150, 255, 0.3); }
+  100% { background-color: transparent; }
+}
+
+.flash {
+  animation: flash 1s ease-out;
+}
+
+.editorModule.widgets .buttonBar {
+  position: relative;
+  flex-wrap: wrap;
+  align-content: center;
+  align-items: flex-end;
+  justify-content: flex-end;
+}
+
+.editorModule.widgets .buttonBar .actions {
+  flex-grow: 0;
+  display: flex;
+  align-content: center;
+  align-items: flex-end;
+  justify-content: flex-end;
+}
+
+.editorModule .segmented-control button.active {
+  background:var(--VTTblueDark);
+  color:#fff;
 }
 
 .widgets.editorModule .buttonBar input[type=text]{
