--- a/client/css/widgets/imagewidget.css
+++ b/client/css/widgets/imagewidget.css
@@ -97,7 +97,8 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  color: var(--color);
+  color: var(--holderTextColor);
+  font-weight: bold;
   overflow: hidden;
   word-break: normal;
   white-space: normal;
