Overlay name checkbox does not effect "similar to"
Changes CSS so "Overlay name" only removes the Main title.

"Similar to" div no longer display margins when empty

"Similar to" div is 1px lower than before. (just because it looks better)

--- a/client/css/overlays/states.css
+++ b/client/css/overlays/states.css
@@ -232,7 +232,6 @@
   bottom: 0;
   right: 0;
   padding: 0;
-  background: #00000061;
   text-shadow: 0 0 3px #000;
   color: white;
 }
@@ -242,7 +241,9 @@
   font-weight: 700;
   font-size: 1.5rem;
   line-height: 1em;
-  margin: 8px 8px 4px 8px;
+  padding: 8px 8px 5px 8px;
+  margin: 0;
+  background: #00000061;
 }
 
 .roomState h4 {
@@ -250,7 +251,9 @@
   font-style: italic;
   font-weight: 700;
   font-size: .8rem;
-  margin: 4px 8px 8px 8px;
+  padding: 3px 8px 4px 8px;
+  margin: 0;
+  background: #00000061;
 }
 .roomState h4 img.emoji {
   transform: skewX(-10deg);
@@ -299,7 +302,7 @@ div:nth-of-type(2) > .list > .roomState .star {
   display: block;
 }
 
-.roomState.hideName:not(.savedGame) .details {
+.roomState.hideName:not(.savedGame) .details h3{
   display: none;
 }
 .roomState.hideName.savedGame .details h3 {
@@ -307,6 +310,10 @@ div:nth-of-type(2) > .list > .roomState .star {
 }
 .roomState.hideName.savedGame .details h4 {
   margin: 8px;
+}
+.roomState h4:empty {
+  margin: 0px;
+  padding: 0px;
 }
 
 .roomState.noImage > img {
