cleaned up ImageWidget.css

--- a/client/css/widgets/holder.css
+++ b/client/css/widgets/holder.css
@@ -16,6 +16,10 @@
   top: -1px;
 }
 
+.holder.hasImage::before {
+  background-image: var(--bgImage);
+}
+
 .holder.transparent {
   background: none;
   border-color: transparent;
