--- a/client/css/widgets/imagewidget.css
+++ b/client/css/widgets/imagewidget.css
@@ -89,10 +89,7 @@
 
 .widget.holder > .holderTextOnly {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  inset: 5%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -104,7 +101,6 @@
   white-space: normal;
   line-height: 1.1;
   box-sizing: border-box;
-  padding: 0.7em;
 }
 
 .widget.holder.hasImage {
